k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: takeawaybill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: takeawaybill
  template:
    metadata:
      labels:
        app: takeawaybill
    spec:
      #      initContainers:
      #        - name: db-migration
      #          image: docker.nghiemphan.de/admin/takeawaybill-backend:20260807_093940
      #          command: [ "flask", "db", "upgrade" ]
      #          env:
      #            - name: FLASK_APP
      #              value: project/__init__.py
      #            - name: DB_HOST
      #              value: "postgres-db-postgresql.postgres-db.svc.cluster.local"
      #            - name: DB_PORT
      #              value: "5432"
      #            - name: DB_NAME
      #              valueFrom:
      #                secretKeyRef:
      #                  name: postgres-credentials
      #                  key: database-name
      #            - name: DB_USER
      #              valueFrom:
      #                secretKeyRef:
      #                  name: postgres-credentials
      #                  key: app-username
      #            - name: DB_PASSWORD
      #              valueFrom:
      #                secretKeyRef:
      #                  name: postgres-credentials
      #                  key: app-password
      containers:
        - name: takeawaybill
          image: docker.nghiemphan.de/admin/takeawaybill-backend:20260807_093940
          #          command:
          #            - python manage.py run -h 0.0.0.0 --port=5005
          #            - gunicorn -b 0.0.0.0:5005 backend.project:app
          #          env:
          #            - name: FLASK_APP
          #              value: project/__init__.py
          #            - name: FLASK_ENV
          #              value: development
          ports:
            - containerPort: 5005
          #          volumeMounts:
          #            - name: firebase-creds
          #              mountPath: /app/secrets
          #              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 5005
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      #      volumes:
      #        - name: firebase-creds
      #          secret:
      #            secretName: firebase-credentials
      imagePullSecrets:
        - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: takeawaybill
spec:
  selector:
    app: takeawaybill
  ports:
    - name: http
      port: 5005
      targetPort: 5005
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: takeawaybill-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 100mb
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - takeawaybill.nghiemphan.de
      secretName: crt-takeawaybill
  rules:
    - host: takeawaybill.nghiemphan.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: takeawaybill
                port:
                  number: 5005
